--- a/pom.xml
+++ b/pom.xml
@@ -174,10 +174,16 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>4.2.6.RELEASE</version>
             </dependency>
+            <dependency>
+            	<groupId>org.springframework</groupId>
+            	<artifactId>spring-web</artifactId>
+            	<version>4.2.6.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <build>
+        <sourceDirectory>src</sourceDirectory>
         <resources>
             <resource>
                 <directory>resources/</directory>
