--- a/pom.xml
+++ b/pom.xml
@@ -44,14 +44,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-oxm</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
             <artifactId>spring-oxm</artifactId>
         </dependency>
         <dependency>
@@ -143,11 +135,6 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-orm</artifactId>
-                <version>4.2.6.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
                 <artifactId>spring-oxm</artifactId>
                 <version>4.2.6.RELEASE</version>
             </dependency>
@@ -205,6 +192,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
                     <webXml>web/WEB-INF/web.xml</webXml>
                     <webResources>
